# VeedxFal_Hackathon

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  AZURE_AI_BUSINESS_CONTEXT_COMPLETE.md  AZURE_AI_BUSINESS_CONTEXT_IMPLEMENTATION.md  DEMO_GUIDE.md  FAL_AI_AVATAR_IMPLEMENTATION.md  FRONTEND_TREND_INTEGRATION_SUMMARY.md  README.md  SETUP_README.md  SHOPIFY_PRODUCT_SYNC_FIX_PLAN.md  SHOPIFY_SYNC_CRITICAL_FIXES.md  SHOPIFY_SYNC_FIXES_IMPLEMENTED.md  SHOPIFY_SYNC_TESTING_GUIDE.md  USER_GUIDE.md  setup.sh
backend/: .env.example  .env.shopify.example  COMPETITOR_SCRAPING_IMPLEMENTATION_SUMMARY.md  COMPETITOR_SCRAPING_SERVICE.md  DATABASE_SCHEMA_FIX_SUMMARY.md  OAUTH_DEBUG_GUIDE.md  OAUTH_FLOW_TEST_RESULTS.md  OAUTH_LOGGING_ENHANCEMENTS.md  OAUTH_REDIRECT_IMPLEMENTATION.md  OAUTH_TESTING_GUIDE.md  README.md  SHOPIFY_DISCONNECT_SYNC_IMPLEMENTATION.md  SHOPIFY_INTEGRATION.md  TREND_ANALYSIS_IMPLEMENTATION_SUMMARY.md  WEBHOOK_CONFIGURATION.md  WEBHOOK_FIXES_SUMMARY.md  add_mock_data_via_api.py  add_video_async_columns.py  add_video_tables_to_supabase.sql  complete_sync_solution.py  create_mock_orders.py  create_mock_trend_data.py  create_simple_generated_videos_table.sql  create_video_tables.py  debug_sync.py  fix_sync_now.py  generate_oauth_url.py  logging_fixes_summary.md  main.py  mock_trend_data.py  populate_sales_data.py  pyproject.toml  requirements-compatible.txt  requirements-dev.txt  requirements-fixed.txt  requirements-minimal.txt  requirements.txt  run_add_shopify_columns.py  run_migration.py  run_shopify_migration.py  (+31 more)
backend/app/: __init__.py
backend/app/api/: __init__.py  deps.py
backend/app/api/middleware/: __init__.py  auth.py  rate_limit.py
backend/app/api/v1/: analytics.py  auth.py  competitor_pricing.py  products.py  shopify.py  shopify_minimal.py  sync.py  trend_analysis.py  upload.py  video.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  rich_protection.py  security.py  security_simple.py
backend/app/models/: __init__.py  analytics.py  auth.py  product.py  shopify.py  sync.py  video.py
backend/app/services/: azure_ai_service.py  competitor_scraping_service.py  fal_ai_service.py  shopify_service.py  trend_analysis_service.py  video_processor.py  zapcap_service.py
docs/: SHOPIFY_API.md  SHOPIFY_DEPLOYMENT_CHECKLIST.md  SHOPIFY_DEVELOPER_GUIDE.md  SHOPIFY_INTEGRATION_SUMMARY.md  SHOPIFY_SETUP.md  (+1 more)
(+57 files in other folders)
